--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,5 +1,23 @@
+:root {
+	--background-color: white;
+	--text-color: black;
+	--link-color: blue;
+	--border-color: var(--text-color);
+}
+
 body {
 	font-size: 18px;
+	margin: 0;
+	padding: 10px;
+	border-radius: 5px;
+
+	background-color: var(--background-color);
+	color: var(--text-color);
+	border: 1px solid var(--border-color);
+
+	& a {
+		color: var(--link-color);
+	}
 
 	.hidden {
 		display: none !important;
