Disable text selection for labels and fieldset legends at options page

--- a/styles/options.css
+++ b/styles/options.css
@@ -1,6 +1,10 @@
 body {
 	font-size: 18px;
 
+	& label, & legend {
+		user-select: none;
+	}
+
 	& fieldset {
 		padding: 0.2em 0.4em 0.4em;
 		border: 1px solid silver;
