--- a/styles/options.css
+++ b/styles/options.css
@@ -1,7 +1,8 @@
 body {
 	font-size: 18px;
 
-	& label, & legend {
+	& label,
+	& legend {
 		user-select: none;
 	}
 
@@ -12,7 +13,7 @@ body {
 
 		&.theme label {
 			display: block;
-			padding: 0.2em 0.2em;
+			padding: 0.2em;
 		}
 	}
 
