--- a/styles/popup.css
+++ b/styles/popup.css
@@ -53,6 +53,10 @@ body {
 		display: none !important;
 	}
 
+	& > .loading {
+		text-align: center;
+	}
+
 	.lyrics {
 		width: 500px;
 		padding: 0;
@@ -164,6 +168,7 @@ body {
 	& .not-supported {
 		color: red;
 		white-space: nowrap;
+		text-align: center;
 	}
 
 	& .captcha {
