--- a/styles/popup.css
+++ b/styles/popup.css
@@ -137,8 +137,13 @@ body {
 		}
 	}
 
+	& a.search-page {
+		display: inline-block;
+		margin-top: 0.4em;
+	}
+
 	& form.load {
-		margin-top: 1em;
+		margin-top: 0.2em;
 
 		& input,
 		& button,
