--- a/styles/popup.css
+++ b/styles/popup.css
@@ -171,9 +171,20 @@ body {
 
 	& .not-found,
 	& .not-supported {
-		color: red;
 		white-space: nowrap;
 		text-align: center;
+
+		& p {
+			color: red;
+			margin: 0;
+		}
+	}
+
+	& .not-supported {
+		& a {
+			display: inline-block;
+			margin-top: 1em;
+		}
 	}
 
 	& .captcha {
