--- a/styles/popup.css
+++ b/styles/popup.css
@@ -8,6 +8,7 @@ body {
 
 	font-size: 18px;
 	margin: 0;
+	word-break: break-word;
 
 	&.light-theme {
 		--background-color: white;
@@ -58,7 +59,6 @@ body {
 	}
 
 	.lyrics {
-		width: 500px;
 		padding: 0;
 
 		& > * {
@@ -92,6 +92,7 @@ body {
 
 		.text {
 			margin-top: 1em;
+			padding: 0 20px;
 			line-height: 1.6em;
 		}
 	}
