--- a/styles/popup.css
+++ b/styles/popup.css
@@ -171,6 +171,7 @@ body {
 	}
 
 	& .not-found,
+	& .breakdown,
 	& .not-supported {
 		white-space: nowrap;
 		text-align: center;
@@ -181,14 +182,17 @@ body {
 		}
 	}
 
-	& .not-supported {
-		& > ul {
-			text-align: left;
-		}
-
+	& .not-supported,
+	& .breakdown {
 		& > a {
 			display: inline-block;
 			margin-top: 1em;
+		}
+	}
+
+	& .not-supported {
+		& > ul {
+			text-align: left;
 		}
 	}
 
