Remake CSS `resize` to a custom corner

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -11,8 +11,12 @@ body {
 	word-break: break-word;
 
 	&.in-iframe {
-		button.pin {
-			display: none;
+		.lyrics {
+			min-width: auto;
+
+			button.pin {
+				display: none;
+			}
 		}
 	}
 
